--- a/teaching/22F-3110/index.htm
+++ b/teaching/22F-3110/index.htm
@@ -77,20 +77,10 @@ div img:hover{
 			<font size="4"> TA: Xiaoqiong Liu (xiaoqiongliu@my.unt.edu)</font>
 		</li>
 		<li>
-			<font size="4"> Office: TBD</font>
+			<font size="4"> Office: F289</font>
 		</li>
 		<li>
-			<font size="4"> Office hours: TBD</font>
-		</li>
-		<br>
-		<li>
-			<font size="4"> IA: Rahul Reddy Balabhadruni (rahulbalabhadruni@my.unt.edu)</font>
-		</li>
-		<li>
-			<font size="4"> Office: TBD</font>
-		</li>
-		<li>
-			<font size="4"> Office hours: TBD</font>
+			<font size="4"> Office hours: Th 4:10-6:10 pm</font>
 		</li>
 	</ul>
 	</p>
@@ -124,11 +114,23 @@ div img:hover{
 		</li>
 	</ul>
 	</p>
+
+	<HR>
+	
+		<p style="margin-top:5px;">
+		<font size="4"> <b><font color="#FF0000">Announcements</font></b></font> 
+		</p>
+		
+		<ul>
+			<li>
+				<font size="4"> <b>08/28/2022:</b> The course website has been launched.</font>
+			</li>
+		</ul>
 	
 	<HR>
 	
 	<p style="margin-top:5px;">
-	<font size="4"> <b>Schedule and class notes (being updated)</b></font> 
+	<font size="4"> <b>Schedule and class notes (<font color="#FF0000">being updated</b></font>)</b></font> 
 	</p>
 	
 	<p style="text-align:justify">
@@ -142,14 +144,14 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 1</b> <br> 8/30 </font></td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Introduction and course overview [<a href="slides\3110-lecture 1-Introduction and course overview.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
+				Introduction and course overview <!--  [<a href="slides\3110-lecture 1-Introduction and course overview.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] --></font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 9/1 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Algorithm Analysis I [<a href="slides\3110-lecture 2-Algorithm Analysis I.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
+			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Algorithm Analysis I <!-- [<a href="slides\3110-lecture 2-Algorithm Analysis I.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]  --></font></td>
 			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
