--- a/publications.html
+++ b/publications.html
@@ -83,6 +83,19 @@
 	<br>
 	
     <ul style="margin-top:5px;">
+
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">Towards Bridging the Distribution Gap: Instance to Prototype Earth Mover’s Distance for Distribution Alignment</font>
+				<br>
+				<font color="#000000" >Q. Zhou, R. Wang, G. Zeng, H. Fan, and G. Zheng</font>
+				<br>
+				<font>Medical Image Analysis (<b>MedIA</b>), accepted, in press.</font>
+				<br>
+				<a href="./publication/MedIA-22.pdf" target="_blank"><font color="#0099ff">paper</font></a>
+				<br>
+			</p>
+		</li>
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
