--- a/teaching/22F-3110/index.htm
+++ b/teaching/22F-3110/index.htm
@@ -166,31 +166,25 @@ div img:hover{
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 9/8 </font></td>
 			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Algorithm Analysis I (cont.) </font></td>
+			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Quiz 1 </font></td>
+		</tr>
+		
+		
+		<tr>
+			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 3</b> <br> 9/13 </font></td>
+			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Recurrence Relations </font></td>
 			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
-		<!--<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 3</b> <br> 9/7 </font></td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Algorithm Analysis I (cont.) [<a href="slides\3110-lecture 4-Algorithm Analysis I-3.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
-			</td>
-			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Quiz 1 </font></td>
-		</tr>
 		
 		<tr>
-			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 9/9 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Recurrence Relations [<a href="slides\3110-lecture 5-Recurrence Relations.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
-			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-		</tr>
-		
-		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 4</b> <br> 9/13 </font></td>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  9/15 </font></td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Recurrence Relations (cont.) [<a href="slides\3110-lecture 5-Recurrence Relations.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
+				Recurrence Relations (cont.) </font>
 			</td>
-			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Assignment 1, due at 9/21/2021 </font></td>
+			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td> <!--Assignment 1, due at 9/21/2021-->
 		</tr>
-		
+		<!--
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 9/16 </font></td>
 			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Abstract Data Type [<a href="slides\3110-lecture 6-Abstract Data Type.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
