--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
-		<!--
-		<li><font style="font-weight:bold; line-height: 120%">2022-07:</font> Check <a href="https://arxiv.org/abs/2207.01076" target="_blank"><font><font color="#0099ff">VLT</font></font></a> on arXiv, a new simple framework for sota vision-language tracking with pure ConvNets.</li> -->
+		
+		<li><font style="font-weight:bold; line-height: 120%">2022-07:</font> Our papers, SwinTrack (<a href="https://arxiv.org/abs/2112.00995" target="_blank"><font color="#0099ff">pdf</font></a>, <a href="https://github.com/litinglin/swintrack" target="_blank"><font color="#0099ff">code</font></a>) and VLT (<a href="https://arxiv.org/abs/2207.01076" target="_blank"><font color="#0099ff">pdf</font></a>, <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#0099ff">code</font></a>), on visual tracking are accepted to <a href="https://nips.cc/" target="_blank"><font><font color="#0099ff">NeurIPS 2022</font></font></a> .</li>
 		<li><font style="font-weight:bold; line-height: 120%">2022-09:</font> A paper on domain distribution alignment (<a href="./publication/MedIA-2022.pdf" target="_blank"><font color="#0099ff">pdf</font></a>) is accepted to MedIA.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2022-07:</font> Work on image inpainting (<a href="./publication/InvertFill-ECCV-2022.pdf" target="_blank"><font color="#0099ff">pdf</font></a>) is accepted to <a href="https://eccv2022.ecva.net/" target="_blank"><font><font color="#0099ff">ECCV 2022</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2022-05:</font> Serve as an Area Chair for <a href="https://wacv2023.thecvf.com/" target="_blank"><font><font color="#0099ff">WACV 2023</font></font></a>.</li>
