--- a/publications.html
+++ b/publications.html
@@ -40,7 +40,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Divert More Attention to Vision-Language Tracking</font>
 				<br>
-				<font color="#000000" >M. Guo, Z. Zhang, H. Fan, and L. Jing</font>
+				<font color="#000000" >M. Guo*, Z. Zhang*, H. Fan, and L. Jing (* equal contribution)</font>
 				<br>
 				<font>	arXiv:2207.01076.</font>
 				<br>
@@ -62,12 +62,12 @@
 			</p>
 		</li>
 		
-		<!--
+		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">SwinTrack: A Simple and Strong Baseline for Transformer Tracking</font>
 				<br>
-				<font color="#000000" >L. Lin, H. Fan, Y. Xu, and H. Ling</font>
+				<font color="#000000" >L. Lin*, H. Fan*, Z. Zhang, Y. Xu, and H. Ling (* equal contribution)</font>
 				<br>
 				<font>arXiv:2112.00995.</font>
 				<br>
@@ -75,7 +75,7 @@
 				<br>
 			</p>
 		</li>
-		-->
+		
     </ul>
 	
 	
