--- a/teaching/22F-3110/index.htm
+++ b/teaching/22F-3110/index.htm
@@ -123,6 +123,9 @@ div img:hover{
 		
 		<ul>
 			<li>
+				<font size="4"> <b>09/15/2022:</b> Assignment 1 is out, due at 11:59pm on 9/29/2022.</font>
+			</li>
+			<li>
 				<font size="4"> <b>08/28/2022:</b> The course website has been launched.</font>
 			</li>
 		</ul>
@@ -182,7 +185,7 @@ div img:hover{
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				Recurrence Relations (cont.) </font>
 			</td>
-			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td> <!--Assignment 1, due at 9/21/2021-->
+			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Assignment 1, due at 9/29/2022 </font></td> <!--Assignment 1, due at 9/21/2021-->
 		</tr>
 		<!--
 		<tr>
