--- a/publications.html
+++ b/publications.html
@@ -38,19 +38,6 @@
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">Divert More Attention to Vision-Language Tracking</font>
-				<br>
-				<font color="#000000" >M. Guo*, Z. Zhang*, H. Fan, and L. Jing (* equal contribution)</font>
-				<br>
-				<font>	arXiv:2207.01076.</font>
-				<br>
-				<a href="https://arxiv.org/abs/2207.01076" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#0099ff">code (coming soon)</font></a>
-				<br>
-			</p>
-		</li>
-	
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">AnimalTrack: A Large-scale Benchmark for Multi-Animal Tracking in the Wild</font>
 				<br>
 				<font color="#000000" >L. Zhang, J. Gao, Z. Xiao, and H. Fan</font>
@@ -62,19 +49,6 @@
 			</p>
 		</li>
 		
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">SwinTrack: A Simple and Strong Baseline for Transformer Tracking</font>
-				<br>
-				<font color="#000000" >L. Lin*, H. Fan*, Z. Zhang, Y. Xu, and H. Ling (* equal contribution)</font>
-				<br>
-				<font>arXiv:2112.00995.</font>
-				<br>
-				<a href="https://arxiv.org/pdf/2112.00995.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/HengLan/SwinTrack" target="_blank"><font color="#0099ff">code</font></a>
-				<br>
-			</p>
-		</li>
 		
     </ul>
 	
@@ -278,7 +252,33 @@
     <!-- full conference papers -->
 	<font size="4" color="#034f84"><b>Conference Papers</b></font>
     <ul style="margin-top:5px;">
-	
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">SwinTrack: A Simple and Strong Baseline for Transformer Tracking</font>
+				<br>
+				<font color="#000000" >L. Lin*, H. Fan*, Z. Zhang, Y. Xu, and H. Ling (* equal contribution)</font>
+				<br>
+				<font>	Advances in Neural Information Processing Systems (<b>NeurIPS</b>), 2022</font>
+				<br>
+				<a href="https://arxiv.org/pdf/2112.00995.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/HengLan/SwinTrack" target="_blank"><font color="#0099ff">code</font></a>
+				<br>
+			</p>
+		</li>
+
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">Divert More Attention to Vision-Language Tracking</font>
+				<br>
+				<font color="#000000" >M. Guo*, Z. Zhang*, H. Fan, and L. Jing (* equal contribution)</font>
+				<br>
+				<font>	Advances in Neural Information Processing Systems (<b>NeurIPS</b>), 2022</font>
+				<br>
+				<a href="https://arxiv.org/abs/2207.01076" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#0099ff">code (coming soon)</font></a>
+				<br>
+			</p>
+		</li>
+
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">High-Fidelity Image Inpainting with GAN Inversion</font>
