--- a/publications.html
+++ b/publications.html
@@ -274,7 +274,7 @@
 				<br>
 				<font>	Advances in Neural Information Processing Systems (<b>NeurIPS</b>), 2022</font>
 				<br>
-				<a href="https://arxiv.org/abs/2207.01076" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#0099ff">code (coming soon)</font></a>
+				<a href="https://arxiv.org/abs/2207.01076" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#0099ff">code</font></a>
 				<br>
 			</p>
 		</li>
