--- a/teaching/22F-3110/index.htm
+++ b/teaching/22F-3110/index.htm
@@ -201,27 +201,22 @@ div img:hover{
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  -</font></td>
 		</tr>
-		<!--
-		<tr>
-			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 9/23 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Tree [<a href="slides\3110-lecture 7-Tree.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
-			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-		</tr>
+		
 		
 		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 6</b> <br> 9/28 </font></td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Tree (cont.) [<a href="slides\3110-lecture 7-Tree.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
+			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 5</b> <br> 9/27 </font></td>
+			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Abstract Data Type (cont.) </font>
 			</td>
-			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> -</font></td>
+			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> -</font></td>
 		</tr>
 		
 		<tr>
-			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 9/30 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Tree (cont.) [<a href="slides\3110-lecture 7-Tree.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
-			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Quiz 2 </font></td>
+			<td width=100 style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 9/29 </font></td>
+			<td width=500  style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Tree </font></td>
+			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Assignment 1 is due </font></td>
 		</tr>
-		
+		<!--
 		<tr>
 			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 7</b> <br> 10/5 </font></td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
