--- a/teaching/22F-3110/index.htm
+++ b/teaching/22F-3110/index.htm
@@ -123,6 +123,9 @@ div img:hover{
 		
 		<ul>
 			<li>
+				<font size="4"> <b>10/04/2022:</b> Assignment 2 is out, due at 11:59pm on 10/25/2022.</font>
+			</li>
+			<li>
 				<font size="4"> <b>09/15/2022:</b> Assignment 1 is out, due at 11:59pm on 9/29/2022.</font>
 			</li>
 			<li>
@@ -215,6 +218,22 @@ div img:hover{
 			<td width=100 style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 9/29 </font></td>
 			<td width=500  style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Tree </font></td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Assignment 1 is due </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 6</b> <br> 10/4 </font></td>
+			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Tree (cont.) </font>
+			</td>
+			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Assignment 2, due at 10/25/2022</font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  10/6 </font></td>
+			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Tree (cont.) </font>
+			</td>
+			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Quiz 2</font></td>
 		</tr>
 		<!--
 		<tr>
