--- a/publications.html
+++ b/publications.html
@@ -60,19 +60,6 @@
 
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">Detection and Tracking Meet Drones Challenge</font>
-				<br>
-				<font color="#000000" >P. Zhu, L. Wen, D. Du, X. Bian, H. Fan, Q. Hu, and H. Ling</font>
-				<br>
-				<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>PAMI</b>), accepted, in press.</font>
-				<br>
-				<a href="https://arxiv.org/abs/2001.06303" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/VisDrone/VisDrone-Dataset" target="_blank"><font color="#0099ff">code and project</font></a>
-				<br>
-			</p>
-		</li>
-
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Towards Bridging the Distribution Gap: Instance to Prototype Earth Mover’s Distance for Distribution Alignment</font>
 				<br>
 				<font color="#000000" >Q. Zhou, R. Wang, G. Zeng, H. Fan, and G. Zheng</font>
@@ -80,6 +67,19 @@
 				<font>Medical Image Analysis (<b>MedIA</b>), 82: 102607, 2022.</font>
 				<br>
 				<a href="./publication/MedIA-2022.pdf" target="_blank"><font color="#0099ff">paper</font></a>
+				<br>
+			</p>
+		</li>
+
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">Detection and Tracking Meet Drones Challenge</font>
+				<br>
+				<font color="#000000" >P. Zhu, L. Wen, D. Du, X. Bian, H. Fan, Q. Hu, and H. Ling</font>
+				<br>
+				<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>PAMI</b>), 44(11): 7380-7399, 2022.</font>
+				<br>
+				<a href="https://arxiv.org/abs/2001.06303" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/VisDrone/VisDrone-Dataset" target="_blank"><font color="#0099ff">code and project</font></a>
 				<br>
 			</p>
 		</li>
