--- a/publications.html
+++ b/publications.html
@@ -259,7 +259,7 @@
 				<br>
 				<font color="#000000" >L. Lin*, H. Fan*, Z. Zhang, Y. Xu, and H. Ling (* equal contribution)</font>
 				<br>
-				<font>	Advances in Neural Information Processing Systems (<b>NeurIPS</b>), 2022.</font>
+				<font>	Neural Information Processing Systems (<b>NeurIPS</b>), 2022.</font>
 				<br>
 				<a href="https://arxiv.org/pdf/2112.00995.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/HengLan/SwinTrack" target="_blank"><font color="#0099ff">code</font></a>
 				<br>
@@ -272,7 +272,7 @@
 				<br>
 				<font color="#000000" >M. Guo*, Z. Zhang*, H. Fan, and L. Jing (* equal contribution)</font>
 				<br>
-				<font>	Advances in Neural Information Processing Systems (<b>NeurIPS</b>), 2022.</font>
+				<font>	Neural Information Processing Systems (<b>NeurIPS</b>), 2022.</font>
 				<br>
 				<a href="https://arxiv.org/abs/2207.01076" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#0099ff">code</font></a>
 				<br>
