--- a/publications.html
+++ b/publications.html
@@ -261,7 +261,7 @@
 				<br>
 				<font>	Neural Information Processing Systems (<b>NeurIPS</b>), 2022.</font>
 				<br>
-				<a href="https://arxiv.org/pdf/2112.00995.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/HengLan/SwinTrack" target="_blank"><font color="#0099ff">code</font></a>
+				<a href="./publication/SwinTrack-NeurIPS-2022.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/HengLan/SwinTrack" target="_blank"><font color="#0099ff">code</font></a>
 				<br>
 			</p>
 		</li>
@@ -274,7 +274,7 @@
 				<br>
 				<font>	Neural Information Processing Systems (<b>NeurIPS</b>), 2022.</font>
 				<br>
-				<a href="https://arxiv.org/abs/2207.01076" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#0099ff">code</font></a>
+				<a href="./publication/VLT-NeurIPS-2022.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#0099ff">code</font></a>
 				<br>
 			</p>
 		</li>
