--- a/teaching/22F-3110/index.htm
+++ b/teaching/22F-3110/index.htm
@@ -123,6 +123,9 @@ div img:hover{
 		
 		<ul>
 			<li>
+				<font size="4"> <b>10/19/2022:</b> Midterm will be on 10/25/2022.</font>
+			</li>
+			<li>
 				<font size="4"> <b>10/04/2022:</b> Assignment 2 is out, due at 11:59pm on 10/25/2022.</font>
 			</li>
 			<li>
@@ -242,6 +245,38 @@ div img:hover{
 				Tree (cont.) <br> Splay Tree</font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 10/13 </font></td>
+			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Splay Tree (cont.) </font>
+			</td>
+			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 8</b> <br> 10/18 </font></td>
+			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Priority Queues</font>
+			</td>
+			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 10/20 </font></td>
+			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Priority Queues (cont.)</font>
+			</td>
+			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 9</b> <br> 10/25 </font></td>
+			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				<font size="4" color="red"> <b>Midterm Exam</b></font></font>
+			</td>
+			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Assignment 2 is due </font></td>
 		</tr>
 		<!--
 		<tr>
