--- a/group.html
+++ b/group.html
@@ -56,6 +56,19 @@
 		</li>
 		
     </ul>
+
+	<font size="4" color="#034f84"><b>TAMS High School Students</b></font>
+	<br>
+	
+    <ul style="margin-top:5px;">
+	
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font size="4" style="line-height: 120%;"><b>Helen Li</b>, 2021</font>
+			</p>
+		</li>
+		
+    </ul>
 	
 
 </div>
