--- a/teaching/22F-3110/index.htm
+++ b/teaching/22F-3110/index.htm
@@ -286,6 +286,23 @@ div img:hover{
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 10</b> <br> 11/1 </font></td>
+			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Sorting</font>
+			</td>
+			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 11/3 </font></td>
+			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Sorting (cont.) </font>
+			</td>
+			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+
 		<!--
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 10/7 </font></td>
