--- a/projects/AnimalTrack/index.html
+++ b/projects/AnimalTrack/index.html
@@ -136,7 +136,7 @@
     <div id="content-inner">
       <div class="section head">
         <h1>
-          <font color="#8CC32C" style="font-variant: small-caps">AnimalTrack: A Large-scale Benchmark for <br> Multi-Animal Tracking in the Wild</font>
+          <font color="#8CC32C" style="font-variant: small-caps">AnimalTrack: A Benchmark for Multi-Animal Tracking in the Wild</font>
         </h1>
 
         <!--=================Authors==========================-->
@@ -203,10 +203,10 @@
         <h3 style="margin-bottom: 10px;">About AnimalTrack</h3>
 		AnimalTrack aims to provide the first dedicated platform for studying the problem of multi-animal tracking (MAT) that is important for animal motion and behavior analysis.  The proposed AnimalTrack has many features:
         <ul style="margin-top:6px; margin-bottom: 6px;">
-          <li><i><b>Large-scale</b></i>: 58 sequences with around 25K frames provided in AnimalTrack. </li>
-          <li><i><b>Accurate annotations</b></i>: Each frame is manual annotated with careful inspection. </li>
-          <li><i><b>Dense trajectories</b></i>: The average number of tracks in AnimalTrack is more than 30. </li>
-          <li><i><b>Diverse classes</b></i>: We collect videos from ten animal categories in the wild. </li>
+          <li><i><b><font color="blue">Dedicated MAT Platform</font></b></i>: 58 sequences with around 25K frames provided in AnimalTrack. </li>
+          <li><i><b><font color="blue">Accurate Annotations</font></b></i>: Each frame is manual annotated with careful inspection. </li>
+          <li><i><b><font color="blue">Dense Trajectories</font></b></i>: The average number of tracks in AnimalTrack is more than 30. </li>
+          <li><i><b><font color="blue">Diverse Classes</font></b></i>: We collect videos from ten animal categories in the wild. </li>
         </ul>
 		Please kindly check out the benchmark details and download links at the <a href="./download.html">Dataset Download</a> page, and evaluation results at the <a href="./evaluation.html">Evaluation</a> page.
       </div>
@@ -219,7 +219,7 @@
         <h3 style="margin-bottom: 10px;">Citation</h3>
         If you use our AnimalTrack for research, please cite our work :)
 		<p style="margin-top: 8px;">
-		<a href="https://arxiv.org/abs/2205.00158", target="_blank">AnimalTrack: A Large-scale Benchmark for Multi-Animal Tracking in the Wild</a> <br>
+		<a href="https://arxiv.org/abs/2205.00158", target="_blank">AnimalTrack: A Benchmark for Multi-Animal Tracking in the Wild</a> <br>
 		Libo Zhang*, Junyuan Gao*, Zhen Xiao, and Heng Fan (*Equal contribution) <br>
 		<i>International Journal of Computer Vision (IJCV), 2022.</i> (accepted)
 		</p>
