--- a/projects/AnimalTrack/evaluation.html
+++ b/projects/AnimalTrack/evaluation.html
@@ -135,7 +135,7 @@
     <div id="content-inner">
       <div class="section head">
         <h1>
-          <font color="#8CC32C" style="font-variant: small-caps">AnimalTrack: A Large-scale Benchmark for <br> Multi-Animal Tracking in the Wild</font>
+			<font color="#8CC32C" style="font-variant: small-caps">AnimalTrack: A Benchmark for Multi-Animal Tracking in the Wild</font>
         </h1>
 
         <!--=================Authors==========================-->
