--- a/publications.html
+++ b/publications.html
@@ -31,20 +31,20 @@
 	<br>
 	<br>
 	
-	<font size="4" color="#034f84"><b>Pre-prints</b></font>
+	<font size="4" color="#034f84"><b>Pre-prints/Submitted</b></font>
 	<br>
 	
 	<ul style="margin-top:5px;">
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">AnimalTrack: A Large-scale Benchmark for Multi-Animal Tracking in the Wild</font>
+				<font style="font-weight:bold">PIDray: A Large-scale X-ray Benchmark for Real-World Prohibited Item Detection</font>
 				<br>
-				<font color="#000000" >L. Zhang, J. Gao, Z. Xiao, and H. Fan</font>
+				<font color="#000000" >L. Zhang, L. Jiang, R. Ji, and H. Fan</font>
 				<br>
-				<font>	arXiv:2205.00158.</font>
+				<font>	under review </font>
 				<br>
-				<a href="https://arxiv.org/abs/2205.00158" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="#" target="_blank"><font color="#0099ff">project (coming soon)</font></a>
+				<a href="#" target="_blank"><font color="#0099ff">paper (coming soon)</font></a> &nbsp; <a href="#" target="_blank"><font color="#0099ff">project (coming soon)</font></a>
 				<br>
 			</p>
 		</li>
@@ -57,6 +57,19 @@
 	<br>
 	
     <ul style="margin-top:5px;">
+
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">AnimalTrack: A Benchmark for Multi-Animal Tracking in the Wild</font>
+				<br>
+				<font color="#000000" >L. Zhang*, J. Gao*, Z. Xiao, and H. Fan (*equal contribution)</font>
+				<br>
+				<font>International Journal of Computer Vision (<b>IJCV</b>), 2022 (accepted for publication).</font>
+				<br>
+				<a href="https://arxiv.org/abs/2205.00158" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://hengfan2010.github.io/projects/AnimalTrack/" target="_blank"><font color="#0099ff">project with data</font></a>
+				<br>
+			</p>
+		</li>
 
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
