--- a/teaching/22F-3110/index.htm
+++ b/teaching/22F-3110/index.htm
@@ -123,6 +123,9 @@ div img:hover{
 		
 		<ul>
 			<li>
+				<font size="4"> <b>11/10/2022:</b>  <a href=".\project.htm" target="_blank"><font color="#0099ff">Course project</font></a> is out, due at 11:50pm on 12/09/2022. The</font>
+			</li>
+			<li>
 				<font size="4"> <b>11/08/2022:</b>Assignment 3 is out, due at 11:59pm on 11/22/2022. </font>
 			</li>
 			<li>
@@ -319,7 +322,7 @@ div img:hover{
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				Graph I </font>
 			</td>
-			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <a href=".\project.htm" target="_blank"><font color="#0099ff">Course project</font></a> is out </font></td>
 		</tr>
 
 		<!--
