--- a/projects/AnimalTrack/index.html
+++ b/projects/AnimalTrack/index.html
@@ -122,7 +122,7 @@
 	  <!--=================contact==========================-->
       <div class="section Highlights" ,="" id="Highlights" style="margin-top: 10px;">
         <h3 style="margin-bottom: 10px;">Contact</h3>
-        If you have any questions, please contact Junyuan Gao at 2018091621016@uestc.edu.cn.
+        If you have any questions, please contact Junyuan Gao at gaojunyuan22@mails.ucas.ac.cn
       </div>
 	  
 	  
