--- a/projects/AnimalTrack/index.html
+++ b/projects/AnimalTrack/index.html
@@ -74,6 +74,7 @@
       <div class="section Highlights" ,="" id="Highlights" style="margin-top: 10px;">
         <h3><font color="red">Updates</font></h3>
         <ul style="margin-top:-10px;">
+          <li>11/2022: All videos have been uploaded. Welcome to use AnimalTrack. </li>
           <li>11/2022: Our AnimalTrack (<a href="https://arxiv.org/abs/2205.00158", target="_blank">pdf</a>) is accepted to International Journal of Computer Vision (<b>IJCV</b>). </li>
           <li>11/2022: The webpage of <a href="#">AnimalTrack</a> has been launched. </li>
         </ul>
