--- a/teaching/22F-3110/index.htm
+++ b/teaching/22F-3110/index.htm
@@ -325,6 +325,22 @@ div img:hover{
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <a href=".\project.htm" target="_blank"><font color="#0099ff">Course project</font></a> is out </font></td>
 		</tr>
 
+		<tr>
+			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 12</b> <br> 11/15 </font></td>
+			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Graph I (cont.) <br> Graph II</font>
+			</td>
+			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 11/17 </font></td>
+			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Graph II (cont.) </font>
+			</td>
+			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Quiz 4 </font></td>
+		</tr>
+
 		<!--
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 10/7 </font></td>
