--- a/teaching/22F-3110/index.htm
+++ b/teaching/22F-3110/index.htm
@@ -339,7 +339,7 @@ div img:hover{
 				Graph II (cont.) </font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Quiz 4 </font></td>
-		</tr>
+		</tr>ß
 
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 13</b> <br> 11/22 </font></td>
@@ -350,7 +350,7 @@ div img:hover{
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 13</b> <br> 11/24 </font></td>
+			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> ß11/24 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<font size="4" color="red"> <b>Thanksgiving (no class)</b></font> </font>
 			</td>
