--- a/teaching/22F-3110/index.htm
+++ b/teaching/22F-3110/index.htm
@@ -350,7 +350,7 @@ div img:hover{
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> ß11/24 </font></td>
+			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 11/24 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<font size="4" color="red"> <b>Thanksgiving (no class)</b></font> </font>
 			</td>
