--- a/projects/AnimalTrack/index.html
+++ b/projects/AnimalTrack/index.html
@@ -114,7 +114,7 @@
 	  <!--=================license==========================-->
       <div class="section Highlights" ,="" id="Highlights" style="margin-top: 10px;">
         <h3 style="margin-bottom: 10px;">License</h3>
-        The annotations of our AnimalTrack are licensed under a <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Creative Commons Attribution 4.0 License</a>. We offer the AnimalTrack for <i><b>non-commercial research purposes only</b></i>. All data are obtained from Internet which are not the property of CAS, Kitware or UNT. These three organizations are not responsible for the content of these videos.
+        The annotations of our AnimalTrack are licensed under a <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Creative Commons Attribution 4.0 License</a>. We offer the AnimalTrack for <i><b>non-commercial research purposes only</b></i>. All data are obtained from Internet which are not the property of CAS or UNT. These organizations are not responsible for the content of these videos.
       </div>
 	  
 	  
