--- a/teaching.html
+++ b/teaching.html
@@ -30,24 +30,17 @@
 	<br>
 	
 	<ul style="margin-top:5px;">
-
+		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				CSCE 3110, Data Structures and Algorithms, Fall 2022 [<a href="./teaching/22F-3110/index.htm" target="_blank"><font color="#0099ff">course website</font></a>].
+				CSCE 5218/4930, Deep Learning, Spring 2022, Spring 2023.
 				<br>
 			</p>
 		</li>
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				CSCE 5218 & 4930, Deep Learning, Spring 2022.
-				<br>
-			</p>
-		</li>
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				CSCE 3110, Data Structures and Algorithms, Fall 2021.
+				CSCE 3110, Data Structures and Algorithms, Fall 2021, Fall 2022 [<a href="./teaching/22F-3110/index.htm" target="_blank"><font color="#0099ff">course website</font></a>].
 				<br>
 			</p>
 		</li>
