--- a/service.html
+++ b/service.html
@@ -34,25 +34,19 @@
 	
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				Area Chair, IEEE Winter Conference on Applications of Computer Vision (<font style="font-weight:bold">WACV</font>), 2023
-				<br>
-			</p>
-		</li>
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				Area Chair, IEEE Winter Conference on Applications of Computer Vision (<font style="font-weight:bold">WACV</font>), 2022
+				Area Chair, IEEE Winter Conference on Applications of Computer Vision (<font style="font-weight:bold">WACV</font>), 2022, 2023
 				<br>
 			</p>
 		</li>
 		
-		<!--
+		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				Co-organizer, International Workshop on Computer Vision for UAVs in (<font style="font-weight:bold">ECCV</font>), 2020
 				<br>
 			</p>
 		</li>
-		-->
+		
 		
     </ul>
 	
