--- a/publications.html
+++ b/publications.html
@@ -255,7 +255,7 @@
 					<br>
 					<font>	Neural Information Processing Systems (<b>NeurIPS</b>), 2022.</font>
 					<br>
-					<a href="./publication/SwinTrack-NeurIPS-2022.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/HengLan/SwinTrack" target="_blank"><font color="#0099ff">code</font></a>
+					<a href="./publication/SwinTrack-NeurIPS-2022.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="./publication/swintrack-poster.pdf" target="_blank"><font color="#0099ff">poster</font></a> &nbsp; <a href="https://github.com/HengLan/SwinTrack" target="_blank"><font color="#0099ff">code</font></a>
 					<br>
 				</p>
 			
@@ -272,7 +272,7 @@
 					<br>
 					<font>	Neural Information Processing Systems (<b>NeurIPS</b>), 2022.</font>
 					<br>
-					<a href="./publication/VLT-NeurIPS-2022.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#0099ff">code</font></a>
+					<a href="./publication/VLT-NeurIPS-2022.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="./publication/vlt-poster.pdf" target="_blank"><font color="#0099ff">poster</font></a> &nbsp; <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#0099ff">code</font></a>
 					<br>
 				</p>
 			
@@ -578,7 +578,7 @@
 					<br>
 					<font>Department of Computer Science, State University of New York at Stony Brook, 2021.</font>
 					<br>
-					<a href="https://www.proquest.com/docview/2558097086?pq-origsite=gscholar&fromopenview=true" target="_blank"><font color="#0099ff">pdf link</font></a>
+					<a href="https://www.proquest.com/docview/2558097086?pq-origsite=gscholar&fromopenview=true" target="_blank"><font color="#0099ff">pdf link</font></a>  &nbsp; <a href="https://docs.google.com/presentation/d/1EniC_qppkrxrY35v1_qq0doQ9RUCc-r-/edit?usp=share_link&ouid=116478199769662584478&rtpof=true&sd=true" target="_blank"><font color="#0099ff">slide</font></a>
 					<br>
 				</p>
 			</td>
