--- a/group.html
+++ b/group.html
@@ -31,10 +31,15 @@
 	<br>
 	
     <ul style="margin-top:5px;">
-	
+		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font size="4" style="line-height: 120%;"><b>Xiaoqiong Liu</b>, 2021-present</font>
+				<font size="4" style="line-height: 120%;"><b>Shaohua Dong</b></font>
+			</p>
+		</li>
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font size="4" style="line-height: 120%;"><b>Xiaoqiong Liu</b></font>
 			</p>
 		</li>
 		
@@ -47,7 +52,7 @@
 	
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font size="4" style="line-height: 120%;"><b>Thanh Le</b>, 2021-present</font>
+				<font size="4" style="line-height: 120%;"><b>Thanh Le</b></font>
 			</p>
 		</li>
 		
@@ -60,7 +65,7 @@
 	
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font size="4" style="line-height: 120%;"><b>Helen Li</b>, 2021</font>
+				<font size="4" style="line-height: 120%;"><b>Helen Li</b></font>
 			</p>
 		</li>
 		
