--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
+		<li><font style="font-weight:bold; line-height: 120%">2023-01:</font> Welcome PhD student Shaohua Dong to join our team.</li>
+		<li><font style="font-weight:bold; line-height: 120%">2023-01:</font> Check out our new preprint (<a href="https://arxiv.org/abs/2301.00371" target="_blank"><font><font color="#0099ff">arXiv</font></font></a>) on domain adaptive object detection.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2022-11:</font> Check out PIDray (<a href="https://arxiv.org/abs/2211.10763" target="_blank"><font><font color="#0099ff">arXiv</font></font></a>) for X-ray-based real-world prohibited item detection/segmentation/classification.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2022-11:</font> Our AnimalTrack (<a href="https://arxiv.org/abs/2205.00158" target="_blank"><font><font color="#0099ff">pdf</font></font></a>, <a href="https://hengfan2010.github.io/projects/AnimalTrack/" target="_blank"><font><font color="#0099ff">project</font></font></a>) is accepted to IJCV.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2022-11:</font> Recognized as the <b>World's Top 2% Scientists</b> (year 2021) by Stanford University. Check <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/3" target="_blank"><font><font color="#0099ff">here</font></font></a> or <a href="https://research.unt.edu/news/unt-faculty-named-among-world%E2%80%99s-most-cited-researchers" target="_blank"><font><font color="#0099ff">UNT News</font></font></a>.</li>
