--- a/publications.html
+++ b/publications.html
@@ -35,7 +35,23 @@
 	<br>
 
 	<table border=0 cellpadding=4>
-			
+		
+		<tr>
+			<td><img src="./publication/mga.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Robust Domain Adaptive Object Detection with Unified Multi-Granularity Alignment</font>
+					<br>
+					<font color="#000000" >L. Zhang, W. Zhou, H. Fan, T. Luo, and H. Ling</font>
+					<br>
+					<font>	arXiv:2301.00371, 2023. </font>
+					<br>
+					<a href="https://arxiv.org/abs/2301.00371" target="_blank"><font color="#0099ff">paper</font></a>
+					<br>
+				</p>
+			</td>
+		</tr>
+
 		<tr>
 			<td><img src="./publication/pid.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
