--- a/group.html
+++ b/group.html
@@ -27,25 +27,88 @@
 <div class="central_body">
 	
 	
-	<font size="4" color="#034f84"><b>PhD Students</b></font>
+	<font size="4" color="#034f84"><b>Current members</b></font>
+	<br>
+
+	<table border=0 cellpadding=4>
+		
+		<tr>
+			<td width=150>
+				<center>
+					<img src="./personal/hfan-2022.jpeg", height="125">
+					<br>
+					<a href="https://tsun.github.io/"><font color="#0099ff" style="font-weight:bold">Heng Fan</font></a>
+					<br>
+					<font >Assistant Professor</font>
+				</center>
+			</td>
+
+			<td width=150>
+				<center>
+					<img src="./groupimgs/female.png", height="125">
+					<br>
+					<font style="font-weight:bold">Xiaoqiong Liu</font>
+					<br>
+					<font >PhD student</font>
+				</center>
+			</td>
+
+			<td width=150>
+				<center>
+					<img src="./groupimgs/male.png", height="125">
+					<br>
+					<font style="font-weight:bold">Shaohua Dong</font>
+					<br>
+					<font >PhD student</font>
+				</center>
+			</td>
+
+			<td width=150>
+				<center>
+					<img src="./groupimgs/male.png", height="125">
+					<br>
+					<font style="font-weight:bold">Thanh Le</font>
+					<br>
+					<font >MS student</font>
+				</center>
+			</td>
+
+			<td width=150>
+				<center>
+					<img src="./groupimgs/female.png", height="125">
+					<br>
+					<font style="font-weight:bold">Helen Li</font>
+					<br>
+					<font >TAMS student</font>
+				</center>
+			</td>
+
+			
+		</tr>
+
+	</table>
+
+
+	<!-- <br>
+	<hr>
+	<br>
+
+	<font size="4" color="#034f84"><b>Alumni</b></font>
 	<br>
 	
     <ul style="margin-top:5px;">
-		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font size="4" style="line-height: 120%;"><b>Shaohua Dong</b></font>
-			</p>
-		</li>
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font size="4" style="line-height: 120%;"><b>Xiaoqiong Liu</b></font>
-			</p>
-		</li>
-		
-    </ul>
 	
-	<font size="4" color="#034f84"><b>MS Students</b></font>
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font size="4" style="line-height: 120%;"><b>Thanh Le</b></font>
+			</p>
+		</li>
+		
+    </ul> -->
+
+	
+	
+	<!-- <font size="4" color="#034f84"><b>MS Students</b></font>
 	<br>
 	
     <ul style="margin-top:5px;">
@@ -69,7 +132,7 @@
 			</p>
 		</li>
 		
-    </ul>
+    </ul> -->
 	
 
 </div>
