--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
 <div class="central_body">
 
     <div class="photo_intro">
-        <img src="./personal/heng.png" alt="Heng Fan" class="photo">
+        <img src="./personal/hfan-2022.jpeg" alt="Heng Fan" class="photo" height="130">
         <div class="intro">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="intro_name"><font size="5">Heng Fan</font></span>
-            <br><br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font size="4">Assistant Professor</font>
-            <br><br>
+            <br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font size="4" style="line-height: 170%">Assistant Professor</font>
+            <br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://computerscience.engineering.unt.edu/"><font color="#0099ff">Department of Computer Science and Engineering</font></a>, <a href="https://www.unt.edu/"><font color="#0099ff">University of North Texas</font></a>
             <br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office: Room F284, UNT Discovery Park, 3940 N Elm St, Denton, TX 76207
             <br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: heng.fan@unt.edu<!-- hefan<img height="13" width="13"
 src="personal/at.gif">cs.stonybrook.edu  -->
-			<br><br>
+			<br>
 			
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[<a href="personal/Fan-selected-cv.pdf" target="_blank"><font color="#0099ff">Curriculum Vitae</font></a>]
 			[<a href="https://scholar.google.com/citations?user=MVQYJiMAAAAJ" target="https://scholar.google.com/citations?user=MVQYJiMAAAAJ"><font color="#0099ff">Google Scholar</font></a>]
