--- a/publications.html
+++ b/publications.html
@@ -83,7 +83,7 @@
 					<br>
 					<font color="#000000" >L. Zhang*, J. Gao*, Z. Xiao, and H. Fan (*equal contribution)</font>
 					<br>
-					<font>International Journal of Computer Vision (<b>IJCV</b>), 2022, in press.</font>
+					<font>International Journal of Computer Vision (<b>IJCV</b>), 131, 496-513, 2023.</font>
 					<br>
 					<a href="https://arxiv.org/abs/2205.00158" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://hengfan2010.github.io/projects/AnimalTrack/" target="_blank"><font color="#0099ff">project with data</font></a>
 					<br>
