--- a/publications.html
+++ b/publications.html
@@ -148,7 +148,7 @@
 					<br>
 					<font color="#000000" >H. Fan, H. Bai, L. Lin, F. Yang, P. Chu, G. Deng, S. Yu, Harshit, M. Huang, J. Liu, Y. Xu, C. Liao, L. Yuan, and H. Ling</font>
 					<br>
-					<font>International Journal of Computer Vision (<b>IJCV</b>), 129: 439–461, 2021.</font>
+					<font>International Journal of Computer Vision (<b>IJCV</b>), 129: 439-461, 2021.</font>
 					<br>
 					<a href="publication\IJCV-21.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="http://vision.cs.stonybrook.edu/~lasot/" target="_blank"><font color="#0099ff">code and benchmark</font></a>
 					<br>
