--- a/teaching/23S-5218/paper_review.htm
+++ b/teaching/23S-5218/paper_review.htm
@@ -63,7 +63,7 @@ div img:hover{
 		</li>
 		</br>
 		<li>
-			<font size="4" > Please name a review <b>rigorously</b> in the format of LastnameFirstname-XX-Review-LastNameOfFirstAuthor.doc (or .pdf), where XX indicates the number of submission for specific student. For example, FanHeng-01-Review-Ling.doc would be the first review I submitted for the paper authored by Ling et al.</font>
+			<font size="4" > Please name a review <b>rigorously</b> in the format of LastnameFirstname-XX-Review-LastNameOfFirstAuthor.pdf (only pdf file will be accepted), where XX indicates the number of submission for specific student. For example, FanHeng-01-Review-Ling.doc would be the first review I submitted for the paper authored by Ling et al.</font>
 		</li>
 		</br>
 		<li>
