--- a/teaching/23S-5218/index.htm
+++ b/teaching/23S-5218/index.htm
@@ -3,7 +3,7 @@
 <!-- saved from url=(0042)https://cse.buffalo.edu/~jmeng2/index.html -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script async="" src="./page_files/analytics.js.download"></script><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-3974203-1', 'auto'); ga('send', 'pageview');</script>
     
-    <title>Deep Learning</title>
+    <title>CSCE 5218 - Deep Learning</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../../stylefiles/global.css">
     <link rel="stylesheet" type="text/css" href="../../stylefiles/navigation.css">
@@ -31,12 +31,12 @@ div img:hover{
 	
 	
 	
-    <font size="5"><center><b>CSCE 5218 & 4930 – Deep Learning</b></center></font>
+    <font size="5"><center><b>CSCE 5218 – Deep Learning</b></center></font>
 
 	
     <p style="margin-top:5px;">
 	<center>
-	<font size="4"> <b>Spring 2022</b></font> &nbsp; &nbsp; 
+	<font size="4"> <b>Spring 2023</b></font> &nbsp; &nbsp; 
 	<br>
 	</center>
 	</p>
@@ -56,29 +56,25 @@ div img:hover{
 			<font size="4"> Office: Discovery Park F284 </font>
 		</li>
 		<li>
-			<font size="4"> Phone: 940-565-3209 </font>
-		</li>
-		<li>
-			<font size="4"> Office hours: Th 3:30 – 5:30 pm, online (preferred, zoom link on Canvas) or in
-office, or by appointment</font>
+			<font size="4"> Office hours: Th 2:30 – 4:00 pm or by appointment</font>
 		</li>
 		<br>
 		<li>
 			<font size="4"> Lecture time: Tu/Th 1:00 - 2:20 pm </font>
 		</li>
 		<li>
-			<font size="4"> Classroom: NTDP B142</font>
+			<font size="4"> Classroom: NTDP B217</font>
 		</li>
 		<li>
-			<font size="4"> Syllabus: <a href=".\Syllabus.pdf" target="_blank"><font color="#0099ff">PDF</font></a></font>
+			<font size="4"> Syllabus: <a href=".\Deep Learning-Syllabus-Spring 2023.pdf" target="_blank"><font color="#0099ff">PDF</font></a></font>
 		</li>
 		
 		<br>
 		<li>
-			<font size="4"> TA: Simon Tandi (E-mail: SimonPeterTandi@my.unt.edu; Office: CSE Help Lab, F232)</font>
+			<font size="4"> TA: Xiaoqiong Liu (E-mail: xiaoqiongliu@my.unt.edu; Office: F289)</font>
 		</li>
 		<li>
-			<font size="4"> Office hours: Tuesday 3:00-5:00 pm</font>
+			<font size="4"> Office hours: Monday/Thursday 11:50-12:50 pm</font>
 		</li>
 	</ul>
 	</p>
@@ -131,24 +127,11 @@ course website regularly for updated reading materials.</font>
 	
 	<ul>
 		<li>
-			<font size="4"> <b>04/18/2022:</b> The project presentation schedule is out. Check it <a href="./presentation_schedule.htm" target="_blank"><font color="#0099ff">here</font></a>.</font>
-		</li>
-		<li>
-			<font size="4"> <b>03/21/2022:</b> The complete paper review lists are out; please submit your reviews on the indicated due date.</font>
-		</li>
-		<li>
-			<font size="4"> <b>03/08/2022:</b> The paper review list 2 is out; due on <font color="#FF0000">Mar. 22, 2022</font>.</font>
-		</li>
-		<li>
-			<font size="4"> <b>02/28/2022:</b> The paper review list 1 is out; due on <font color="#FF0000">Mar. 8, 2022</font>.</font>
-		</li>
-		<li>
-			<font size="4"> <b>02/15/2022:</b> The course project proposal is due to <font color="#FF0000">Feb. 28, 2022</font>.</font>
-		</li>
-		<li>
-			<font size="4"> <b>02/01/2022:</b> The details of the course project have been released, check it <a href="./course_project.htm" target="_blank"><font color="#0099ff">here</font></a>.</font>
+			<font size="4"> <b>01/17/2022:</b> Course website has been launched.</font>
 		</li>
 	</ul>
+
+	<!--
 	
 	<p style="margin-top:5px;">
 	<font size="4"> <b><font color="#FF0000">Links</font></b></font> 
@@ -163,8 +146,10 @@ course website regularly for updated reading materials.</font>
 		</li>
 	</ul>
 	
-	<HR>
+	-->
 	
+	<HR>
+
 	<p style="margin-top:5px;">
 	<font size="4"> <b><font color="#FF0000">Paper review list</font></b></font> 
 	</p>
@@ -172,7 +157,9 @@ course website regularly for updated reading materials.</font>
 	
 	<font size="4"><b>Important:</b> Read the requirements (<a href="./paper_review.htm" target="_blank"><font color="#0099ff">click here</font></a>) for paper review. Here is a <a href="./FanHeng-01-Review-Henriques.pdf" target="_blank"><font color="#0099ff">review example</font></a> for your reference.</font>
 	
+	(<font size="4" color="#FF0000">Paper review lists will be gradually added.</font>)
 	
+	<!--
 	<p style="text-align:justify">
 	<font size="4" ><b>Paper review list 1</b> (<font size="4" color="#FF0000">due on 3/8</font>):</font>
 	<ol>
@@ -264,8 +251,10 @@ course website regularly for updated reading materials.</font>
 	</p>
 	
 	</br>
-	<HR>
+	-->
 	
+	<HR>
+
 	<p style="margin-top:5px;">
 	<font size="4"> <b>Schedule and class notes (<font color="#FF0000">being updated</font>)</b></font> 
 	</p>
@@ -273,32 +262,34 @@ course website regularly for updated reading materials.</font>
 	<p style="text-align:justify">
 	<table border = "0" cellspacing="5px">
 		<tr>
-			<td width=100 style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Date</b> </font></td>
-			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Lecture</b> </font></td>
-			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Reading</b> </font></td>
-			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Note</b> </font></td>
+			<td width=100 style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Date</b> </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Lecture</b> </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Reading</b> </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Note</b> </font></td>
 		</tr> 
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 1</b> <br> 1/18 </font></td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 1</b> <br> 1/17 </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<b>Introduction</b> <!--[<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]--></font>
 			</td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>-</b> </font></td>
-			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>-</b> </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
 		<tr>
-			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 1/20 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Machine Learning Overview</b> <!--[<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]--></font></td>
-			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning, Ch 1-5 </font></td>
-			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=100 style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 1/19 </font></td>
+			<td width=500  style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Machine Learning Overview</b> </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeffFB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning, Ch 1-5 </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
+
+		<!--
 		
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 2</b> <br> 1/25 </font></td>
 			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				<b>Machine Learning Overview (cont.)</b> <!--[<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]--></font>
+				<b>Machine Learning Overview (cont.)</b> </font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning, Ch 1-5 </font></td>
 			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
@@ -693,7 +684,7 @@ course website regularly for updated reading materials.</font>
 			<td width=500 style='width:480.0pt;background:#EAEBF5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 			<td width=200 style='width:180.0pt;background:#EAEBF5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" >  -  </font></td>
 		</tr>
-		
+		-->
 	</table>
 	</p>
 	
@@ -707,13 +698,13 @@ course website regularly for updated reading materials.</font>
 	<font size="4">Grading will be based on the following components:</font>
 	<ul>
 		<li>
-			<font size="4"> Class participation and homework assignment: 25%</font>
+			<font size="4"> Attendance: 5%</font>
 		</li>
 		<li>
-			<font size="4"> Paper review: 20%</font>
+			<font size="4"> Paper review: 30%</font>
 		</li>
 		<li>
-			<font size="4"> Course project: 40%</font>
+			<font size="4"> Course project: 50% (15% for proposal, 25% for final report, and 10% for presentation)</font>
 		</li>
 		<li>
 			<font size="4"> Final exam: 15%</font>
