--- a/projects/AnimalTrack/evaluation.html
+++ b/projects/AnimalTrack/evaluation.html
@@ -186,7 +186,11 @@
         <h3 style="margin-bottom: 10px;">Evaluation Results</h3>
 		<p style="margin-top: 6px;">
 		
-		All the results can be downloaded <a href="#">here</a>. Below are some evaluation results and comparison.
+		Detailed the results (by class) can be downloaded from
+		<a href="https://drive.google.com/file/d/1tvflQaT5p3rSuT8giLSkozHPoCFFMoe5/view?usp=sharing">Results - google drive</a> or 
+		<a href="https://pan.baidu.com/s/1Sj6wx1QwdR41zGujJK-Nsw?pwd=8jwt">Results - baidu pan</a>
+		<br>
+		Below are overall evaluation results and comparison.
 
 		<br>
 		
