--- a/group.html
+++ b/group.html
@@ -37,7 +37,7 @@
 				<center>
 					<img src="./personal/hfan-2022.jpeg", height="125">
 					<br>
-					<a href="https://tsun.github.io/"><font color="#0099ff" style="font-weight:bold">Heng Fan</font></a>
+					<a href="https://hengfan2010.github.io/"><font color="#0099ff" style="font-weight:bold">Heng Fan</font></a>
 					<br>
 					<font >Assistant Professor</font>
 				</center>
