--- a/teaching/23S-5218/index.htm
+++ b/teaching/23S-5218/index.htm
@@ -127,6 +127,9 @@ course website regularly for updated reading materials.</font>
 	
 	<ul>
 		<li>
+			<font size="4"> <b>02/09/2022:</b> Paper review list 1 is out, due on 2/19.</font>
+		</li>
+		<li>
 			<font size="4"> <b>01/17/2022:</b> Course website has been launched.</font>
 		</li>
 	</ul>
@@ -159,9 +162,9 @@ course website regularly for updated reading materials.</font>
 	
 	(<font size="4" color="#FF0000">Paper review lists will be gradually added.</font>)
 	
-	<!--
+	
 	<p style="text-align:justify">
-	<font size="4" ><b>Paper review list 1</b> (<font size="4" color="#FF0000">due on 3/8</font>):</font>
+	<font size="4" ><b>Paper review list 1</b> (<font size="4" color="#FF0000">due on 2/19</font>):</font>
 	<ol>
 		<li>
 			<font size="4" > A Krizhevsky, I Sutskever, and G Hinton, ImageNet Classification with Deep Convolutional Neural Networks, <i>NeurIPS</i>, 2012.</font>
@@ -172,7 +175,7 @@ course website regularly for updated reading materials.</font>
 		
 	</ol>
 	</p>
-	
+	<!--
 	<p style="text-align:justify">
 	<font size="4" ><b>Paper review list 2</b> (<font size="4" color="#FF0000">due on 3/22</font>):</font>
 	<ol>
