--- a/teaching/23S-5218/index.htm
+++ b/teaching/23S-5218/index.htm
@@ -127,6 +127,9 @@ course website regularly for updated reading materials.</font>
 	
 	<ul>
 		<li>
+			<font size="4"> <b>02/09/2022:</b> Paper review list 2 is out, due on 2/26.</font>
+		</li>
+		<li>
 			<font size="4"> <b>02/09/2022:</b> Paper review list 1 is out, due on 2/19.</font>
 		</li>
 		<li>
@@ -165,8 +168,8 @@ course website regularly for updated reading materials.</font>
 	
 	<p style="text-align:justify">
 	<font size="4" ><b>Paper review list 1</b> (<font size="4" color="#FF0000">due on 2/19</font>):</font>
-	<ol>
-		<li>
+	<ol >
+		<li >
 			<font size="4" > A Krizhevsky, I Sutskever, and G Hinton, ImageNet Classification with Deep Convolutional Neural Networks, <i>NeurIPS</i>, 2012.</font>
 		</li>
 		<li>
@@ -175,24 +178,23 @@ course website regularly for updated reading materials.</font>
 		
 	</ol>
 	</p>
-	<!--
+	
 	<p style="text-align:justify">
-	<font size="4" ><b>Paper review list 2</b> (<font size="4" color="#FF0000">due on 3/22</font>):</font>
-	<ol>
+	<font size="4" ><b>Paper review list 2</b> (<font size="4" color="#FF0000">due on 2/26</font>):</font>
+	<ol start="3">
 		<li>
 			<font size="4" > K Simonyan and A Zisserman, Very Deep Convolutional Networks for Large-Scale Image Recognition, <i>ICLR</i>, 2015.</font>
 		</li>
 		<li>
-			<font size="4" > K. He, X. Zhang, S. Ren, and J. Sun, Deep Residual Learning for Image Recognition
-, <i>CVPR</i>, 2016.</font>
+			<font size="4" > K. He, X. Zhang, S. Ren, and J. Sun, Deep Residual Learning for Image Recognition, <i>CVPR</i>, 2016.</font>
 		</li>
 		
 	</ol>
 	</p>
-	
+	<!--
 	<p style="text-align:justify">
 	<font size="4" ><b>Paper review list 3</b> (<font size="4" color="#FF0000">due on 3/29</font>):</font>
-	<ol>
+	<ol start="5">
 		<li>
 			<font size="4" > R. Girshick, J. Donahue, T. Darrell, and J. Malik, Rich feature hierarchies for accurate object detection and semantic segmentation, <i>CVPR</i>, 2014.</font>
 		</li>
