--- a/teaching/23S-5218/course_project.htm
+++ b/teaching/23S-5218/course_project.htm
@@ -31,12 +31,12 @@ div img:hover{
 	
 	
 	
-    <font size="5"><center><b>CSCE 5218 & 4930 – Deep Learning</b></center></font>
+    <font size="5"><center><b>CSCE 5218 – Deep Learning</b></center></font>
 
 	
     <p style="margin-top:5px;">
 	<center>
-	<font size="4"> <b>Spring 2022</b></font> &nbsp; &nbsp; 
+	<font size="4"> <b>Spring 2023</b></font> &nbsp; &nbsp; 
 	<br>
 	</center>
 	</p>
@@ -71,14 +71,14 @@ div img:hover{
 	<font size="4">The timeline of the course project is as follows</font>
 	<ul>
 		<li>
-			<font size="4"> Proposal deadline: <font color="#FF0000">February 28, 2022</font></font>
+			<font size="4"> Proposal deadline: <font color="#FF0000">March 16, 2023</font></font>
 		</li>
 		<li>
-			<font size="4"> Final report deadline: <font color="#FF0000">April 17, 2022</font></font>
+			<font size="4"> Final report deadline: <font color="#FF0000">April 20, 2023</font></font>
 		</li>
-		<li>
+		<!-- <li>
 			<font size="4"> Presentation: <font color="#FF0000">Check it <a href="presentation_schedule.htm" target="_blank"><font color="#0099ff">here</font></a>.   </font></font>
-		</li>
+		</li> -->
 	</ul>
 	</p>
 	
@@ -181,7 +181,7 @@ div img:hover{
 	</p>
 	
 	<p style="text-align:justify">
-	<font size="4">Please follow <a href="https://cvpr2022.thecvf.com/sites/default/files/2021-10/cvpr2022-author_kit-v1_1-1.zip" target="_blank"><font color="#0099ff">CVPR (latex)</font></a> to format your proposal and final report. The proposal and final report should be strictly limited up to 4 and 8 pages, respectively, including references, but they should not be too short!
+	<font size="4">Please follow <a href="https://cvpr2022.thecvf.com/sites/default/files/2021-10/cvpr2022-author_kit-v1_1-1.zip" target="_blank"><font color="#0099ff">CVPR (latex)</font></a> to format your proposal and final report. The proposal and the final report should have strictly 4 and 8 pages, respectively, excluding references.
 	
 	<br>
 	<br>
